# agriwater-fw

./: CMakeLists.txt  README.md
main/: CMakeLists.txt  main.c
main/interfaces/mqtt/inc/: mqtt.h
main/interfaces/mqtt/src/: mqtt.c
main/interfaces/wifi/inc/: wifi.h
main/interfaces/wifi/src/: wifi.c
